  defined in inttypes.h instead of stdint.h on that platform.

- Issue #6373: Fixed a SystemError when encoding with the latin-1 codec and
  the 'surrogateescape' error handler, a string which contains unpaired
  surrogates.

C-API
-----

- Issue #6405: Remove duplicatet type declarations in descrobject.h.

- The code flags for old __future__ features are now available again.

Library
-------

- Issue #6415: Fixed warnings.warn sagfault on bad formatted string.

- Issue #6358: The exit status of a command started with os.popen() was
  reported differently than it did with python 2.x.

- Issue #6323: The pdb debugger did not exit when running a script with a
  syntax error.

- Issue #6369: Fix an RLE decompression bug in the binhex module.

- Issue #6344: Fixed a crash of mmap.read() when passed a negative argument.

Build
-----

- Issue 4601: 'make install' did not set the appropriate permissions on
  directories.

- Issue 5390: Add uninstall icon independent of whether file
  extensions are installed.


What's New in Python 3.1?
=========================

*Release date: 27-June-2009*

Core and Builtins
-----------------

- Issue #6334: Fix bug in range length calculation for ranges with
  large arguments.

- Issue #6329: Fixed iteration for memoryview objects (it was being blocked
  because it wasn't recognized as a sequence).

Library
-------

- Issue #6314: logging.basicConfig() performs extra checks on the "level"
  argument.

- Issue #6274: Fixed possible file descriptors leak in subprocess.py

- Accessing io.StringIO.buffer now raises an AttributeError instead of
  io.UnsupportedOperation.

- Issue #6271: mmap tried to close invalid file handle (-1) when anonymous.
  (On Unix)

- Issue #1202: zipfile module would cause a struct.error when attempting to
  store files with a CRC32 > 2**31-1.

Extension Modules
-----------------

- Issue #5590: Remove unused global variable in pyexpat extension.


What's New in Python 3.1 Release Candidate 2?